<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.view.page.login.LoginActivity">

    <data>

        <variable
            name="viewModel"
            type="io.github.aidenkoog.uiprototype.presentation.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/login_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/ic_launcher_background"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/login_title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_img"
            tools:ignore="SpUsage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/login_desc_text"
            android:textColor="@color/black"
            android:textSize="@dimen/login_desc_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_title"
            tools:ignore="SpUsage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_sub_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/login_sub_desc_text"
            android:textColor="@color/black"
            android:textSize="@dimen/login_desc_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_desc"
            tools:ignore="SpUsage" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_KaKao_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_ripple_kakao_login"
            android:drawableStart="@drawable/btn_drawable_start_ic_layer_list"
            android:onClick="@{()->viewModel.onLoginKaKaoAccount()}"
            android:text="@string/login_KaKao_login_btn_text"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/login_sub_desc" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_google_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_ripple_google_login"
            android:drawableStart="@drawable/btn_drawable_start_ic_layer_list"
            android:onClick="@{()->viewModel.onLoginGoogleAccount()}"
            android:text="@string/login_google_login_btn_text"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/login_KaKao_login_btn" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/login_sign"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/ic_launcher_background"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>